syntax = "proto3";

import "value.proto";
import "protointerface.proto";
import "relational_frame.proto";
import "graph_frame.proto";
import "document_frame.proto";

option java_multiple_files = true;
option java_package = "org.polypheny.db.protointerface.proto";
option java_outer_classname = "StatementRequests";

package polypheny.protointerface;

message ExecuteUnparameterizedStatementRequest {
  string statement_language_name = 1;
  string statement = 2;
  optional int32 fetch_size = 3;
  optional string namespace = 4;
}

message ExecuteUnparameterizedStatementBatchRequest {
  repeated ExecuteUnparameterizedStatementRequest statements = 1;
}

message PreparedStatementRequest {
  string statement_language_name = 1;
  string statement = 2;
  optional string namespace = 3;
}

message ExecuteIndexedPreparedStatementRequest {
  int32 statementId = 1;
  IndexedParameters parameters = 2;
  optional int32 fetch_size = 3;
}

message ExecuteIndexedPreparedStatementBatchRequest {
  int32 statement_id = 1;
  repeated IndexedParameters parameters = 2;
}

message executeNamedPreparedStatementRequest {
  int32 statementId = 1;
  repeated NamedParameters parameters = 2;
}

message IndexedParameters {
  repeated ProtoValue parameters = 1;
}

message NamedParameters {
  map<string, ProtoValue> parameters = 1;
}

message CloseStatementRequest {
  int32 statement_id = 1;
}

message FetchRequest {
  int32 statement_id = 1;
}

message Frame {
  bool isLast = 1;
  oneof result {
    RelationalFrame relational_frame = 2;
    GraphFrame graph_frame = 3;
    DocumentFrame document_frame = 4;
  }
}
